# vpr-bin2fmt

./: .gitignore  CMakeLists.txt  Makefile  README.md  file.txt  gcc-toolchain-release.cmake  makefile  run-tests.sh
.github/workflows/: build.yml  gcc_build.yml
include/: parser.h  util.h
src/: main.c  parser.c  util.c
